Adds static temporal AA

--- a/examples/temporalpostfx/index.html
+++ b/examples/temporalpostfx/index.html
@@ -18,8 +18,14 @@
     <script type="text/javascript" src="../../builds/dist/OSG.js"></script>
     <script type="text/javascript" src="main.js"></script>
     <script type="text/javascript" src="fxaa.js"></script>
-    <script type="text/javascript" src="temporalreproject.js"></script>
-        <script type="text/javascript" src="temporalaa.js"></script>
+
+    <!--     <script type="text/javascript" src="smaa.js"></script> !-->
+
+    <script type="text/javascript" src="CustomCompiler.js"></script>
+    <script type="text/javascript" src="temporalAttribute.js"></script>
+    <script type="text/javascript" src="ssaa.js"></script>
+
+    <script type="text/javascript" src="temporalaa.js"></script>
 </head>
 
 
