Custom compiler temporal Attribute, node and vertex in order to display any model using temporal aa

--- a/examples/temporalpostfx/index.html
+++ b/examples/temporalpostfx/index.html
@@ -16,16 +16,23 @@
     <script type="text/javascript" src="../vendors/dagre.js"></script>
 
     <script type="text/javascript" src="../../builds/dist/OSG.js"></script>
-    <script type="text/javascript" src="main.js"></script>
-    <script type="text/javascript" src="fxaa.js"></script>
 
-    <!--     <script type="text/javascript" src="smaa.js"></script> !-->
 
-    <script type="text/javascript" src="CustomCompiler.js"></script>
     <script type="text/javascript" src="temporalAttribute.js"></script>
+    <script type="text/javascript" src="velocityAttribute.js"></script>
+    <script type="text/javascript" src="CustomCompiler.js"></script>
+
+    <script type="text/javascript" src="main.js"></script>
+
+
+    <script type="text/javascript" src="fxaa.js"></script>
+    <script type="text/javascript" src="scene.js"></script>
+
+    <script type="text/javascript" src="velocity.js"></script>
+    <script type="text/javascript" src="smaa.js"></script>
+
     <script type="text/javascript" src="ssaa.js"></script>
 
-    <script type="text/javascript" src="temporalaa.js"></script>
 </head>
 
 
