Add motion blur (camera using depth buffer  or object based using velocity buffer)

--- a/examples/temporalpostfx/index.html
+++ b/examples/temporalpostfx/index.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" type="text/css" href="../templates/css/base.css">
 
     <!-- Javascript -->
+    <script type="text/javascript" src="../vendors/es5-shim.js"></script>
+    <script type="text/javascript" src="../vendors/es6-shim.js"></script>
+
     <script type="text/javascript" src="../vendors/jquery-2.1.1.js"></script>
     <script type="text/javascript" src="../vendors/dat.gui.js"></script>
-    <script type="text/javascript" src="../vendors/Q-0.9.7.js"></script>
-    <script type="text/javascript" src="../vendors/Hammer-1.0.5.js"></script>
-    <script type="text/javascript" src="../vendors/Leap.js"></script>
+    <script type="text/javascript" src="../vendors/q-0.9.7.js"></script>
+    <script type="text/javascript" src="../vendors/hammer-1.0.5.js"></script>
+    <script type="text/javascript" src="../vendors/leap.js"></script>
 
     <script type="text/javascript" src="../vendors/d3.js"></script>
     <script type="text/javascript" src="../vendors/dagre.js"></script>
@@ -29,6 +32,9 @@
     <script type="text/javascript" src="scene.js"></script>
 
     <script type="text/javascript" src="velocity.js"></script>
+    <script type="text/javascript" src="motionBlurVelocity.js"></script>
+    <script type="text/javascript" src="motionBlurDepth.js"></script>
+
     <script type="text/javascript" src="smaa.js"></script>
 
     <script type="text/javascript" src="ssaa.js"></script>
