--- a/examples/hpp/index.html
+++ b/examples/hpp/index.html
@@ -32,6 +32,7 @@
   <div id="toolbar">
     <button id="loadConfig" type="button">Load</button>
     <input id="sliderPath" type="range" min="0" max="100" value="0" step="1"/>
+    <input id="timePath" type="number" min="0.1" max="50" value="4" step="0.1"/>
     <button id="playPath" type="button">Play path</button>
   </div>
 
